fix z-index problem with #changelist-filters

--- a/admin_styles/static/admin_styles/scss/base/_base.scss
+++ b/admin_styles/static/admin_styles/scss/base/_base.scss
@@ -15,7 +15,8 @@ a {
 }
 
 #header {
-    z-index: 3;
+    // more than #changelist-filter
+    z-index: 1001;
     position: fixed;
     top: 0;
     left: 0;
@@ -175,7 +176,8 @@ a {
     display: block;
     box-sizing: border-box;
     width: 100%;
-    overflow: hidden;
+    // why? cuts off filters!
+    // overflow: hidden;
     background: #f4f4f4;
 }
 
