--- a/admin_styles/static/admin_styles/scss/base/_forms.scss
+++ b/admin_styles/static/admin_styles/scss/base/_forms.scss
@@ -161,6 +161,8 @@ div.form-row {
 .paginator,
 &.change-form .submit-row {
     position: fixed;
+    // more than #changelist-filter
+    z-index: 1001;
     left: 0;
     bottom: 0;
     box-sizing: border-box;
